restful-ws/3.0/_index.md
---
title: "Jakarta RESTful Web Services 3.0"
date: 2020-08-26
summary: "Release for Jakarta EE 9"
---
Jakarta RESTful Web Services provides a foundational API to develop web services
following the Representational State Transfer (REST) architectural pattern.

* [Jakarta RESTful Web Services 3.0 Release Record](https://projects.eclipse.org/projects/ee4j.jaxrs/releases/3.0)
  * [Jakarta EE Platform 9 Release Plan](https://eclipse-ee4j.github.io/jakartaee-platform/jakartaee9/JakartaEE9ReleasePlan)
* [Jakarta RESTful Web Services 3.0 Specification Document](./jakarta-restful-ws-spec-3.0.pdf) (PDF)
* [Jakarta RESTful Web Services 3.0 Specification Document](./jakarta-restful-ws-spec-3.0.html) (HTML)
* [Jakarta RESTful Web Services 3.0 Javadoc](./apidocs)
* [Jakarta RESTful Web Services 3.0.0 TCK](https://download.eclipse.org/jakartaee/restful-ws/3.0/jakarta-restful-ws-tck-3.0.0.zip)  ([sig](https://download.eclipse.org/jakartaee/restful-ws/3.0/jakarta-restful-ws-tck-3.0.0.zip.sig),  [sha](https://download.eclipse.org/jakartaee/restful-ws/3.0/jakarta-restful-ws-tck-3.0.0.zip.sha256),  [pub](https://raw.githubusercontent.com/jakartaee/specification-committee/master/jakartaee-spec-committee.pub))
   * Addresses RESTFul Web Services Challenge ([Issue #937](https://github.com/eclipse-ee4j/jaxrs-api/issues/937)) [Jakarta RESTful Web Services 3.0.1 TCK](https://download.eclipse.org/jakartaee/restful-ws/3.0/jakarta-restful-ws-tck-3.0.1.zip) ([sig](https://download.eclipse.org/jakartaee/restful-ws/3.0/jakarta-restful-ws-tck-3.0.1.zip.sig),  [sha](https://download.eclipse.org/jakartaee/restful-ws/3.0/jakarta-restful-ws-tck-3.0.1.zip.sha256),  [pub](https://raw.githubusercontent.com/jakartaee/specification-committee/master/jakartaee-spec-committee.pub))
   * Adds JDK 11 support [Jakarta RESTful Web Services 3.0.2 TCK](https://download.eclipse.org/jakartaee/restful-ws/3.0/jakarta-restful-ws-tck-3.0.2.zip)  ([sig](https://download.eclipse.org/jakartaee/restful-ws/3.0/jakarta-restful-ws-tck-3.0.2.zip.sig),  [sha](https://download.eclipse.org/jakartaee/restful-ws/3.0/jakarta-restful-ws-tck-3.0.2.zip.sha256),  [pub](https://raw.githubusercontent.com/jakartaee/specification-committee/master/jakartaee-spec-committee.pub))
* Maven coordinates
  * [jakarta.jaxrs:jakarta.jaxrs-api:jar:3.0.0](https://search.maven.org/artifact/jakarta.ws.rs/jakarta.ws.rs-api/3.0.0/jar)


# Compatible Implementations

* [Eclipse Jersey 3.0.0](https://eclipse-ee4j.github.io/jersey/download.html)

# Ballots

## Plan Review

[//]: # (For Jakarta EE 9, the Platform Plan Review covered 95% of the Specification Projects.  For those Projects, just use the following statement in this Plan Review section:)

This Specification Project's Plan Review was covered by the [Jakarta EE 9 Plan Review](https://jakarta.ee/specifications/platform/9/).  
Please reference that ballot for the official results.

[//]: # (If your Project was required to do a standalone Plan Review...  You'll need to perform an official Plan Review ballot and record the results here.)

## Release Review

The Specification Committee Ballot concluded successfully on 2020-11-04 with the following results.

| Representative                                 | Representative for: | Vote |
|----------------------------------------------------|---------------------|------|
|Kenji Kazumura                                      | Fujitsu | +1
|Dan Bandera, Kevin Sutter                           | IBM | +1
|Ed Bratt, Dmitry Kornilov                           | Oracle | +1
|Andrew Pielage, Matt Gill                           | Payara | +1
|Scott Stark, Mark Little                            | Red Hat | +1
|David Blevins, Jean-Louis Monteiro.                 | Tomitribe | +1
|Ivar Grimstad                                       | EE4J PMC | +1
|Marcelo Ancelmo, Martijn Verburg                    | Participant Members | no vote
|Werner Keil                                         | Committer Members | +1
|Scott (Congquan) Wang                               | Enterprise Members | +1
|                                                    | Total | 9

The ballot was run in the [jakarta.ee-spec mailing list](https://www.eclipse.org/lists/jakarta.ee-spec/msg01136.html)
